--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KYVQDHCHVT"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EMD4KJJZJB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KYVQDHCHVT');
+  gtag('config', 'G-EMD4KJJZJB');
 </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
